<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top"
    android:orientation="vertical">

    <include layout="@layout/view_custom_toolbar" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/frame_text"
        android:gravity="center|left"
        android:hint="@string/contact_email"
        android:maxLength="100"
        android:paddingLeft="20dp"
        android:textColorHint="@color/grey"
        android:textSize="17sp"
        tools:ignore="RtlHardcoded,RtlSymmetry,TextFields" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/frame_text">

        <EditText
            android:id="@+id/feedback_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:background="@null"
            android:gravity="top"
            android:hint="@string/write_suggestion_and_feedback"
            android:maxLength="50"
            android:textColorHint="@color/grey"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/text_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/default_text_limit" />

    </FrameLayout>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:layout_margin="30dp"
        android:background="@drawable/frame_long_grey"
        android:text="@string/submit"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:layout_marginTop="100dp"
        android:text="@string/support_email" />

</LinearLayout>
