<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top"
    android:orientation="vertical">

    <include layout="@layout/view_custom_toolbar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/copyright"
        android:textColor="@android:color/black"
        android:textSize="21sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:lineSpacingMultiplier="1.4"
        android:padding="15dp"
        android:text="@string/copyright_content"
        android:textColor="@android:color/black"
        android:textSize="14sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lineSpacingMultiplier="1.4"
        android:padding="15dp"
        android:text="@string/copyright_content2"
        android:textColor="@android:color/black"
        android:textSize="14sp" />

</LinearLayout>