<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top"
    android:orientation="vertical"
    tools:context="com.example.tvsample.module.me.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/fast_login"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            tools:ignore="RelativeOverlap" />

        <ImageView
            android:id="@+id/btn_close"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:padding="10dp"
            android:src="@drawable/close"
            tools:ignore="ContentDescription" />

    </RelativeLayout>

    <ImageView
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/personal_default"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/btn_facebook_login"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/login_facebook"
        android:text="@string/facebook_login"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_google_login"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/login_google"
        android:text="@string/google_login"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center">

        <Button
            android:id="@+id/btn_check"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:background="@drawable/checkbox_button" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/has_read"
            android:textSize="12sp" />

    </LinearLayout>

</LinearLayout>
