<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical">

    <include layout="@layout/view_custom_toolbar" />

    <RelativeLayout
        android:id="@+id/btn_personal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginLeft="25dp"
            android:layout_marginStart="25dp"
            android:text="@string/personal_information"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            tools:ignore="RelativeOverlap" />

        <include layout="@layout/view_right_arrow" />

    </RelativeLayout>

    <include layout="@layout/view_line_grey" />

    <RelativeLayout
        android:id="@+id/btn_push"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginLeft="25dp"
            android:layout_marginStart="25dp"
            android:text="@string/allow_push"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            tools:ignore="RelativeOverlap" />

        <Switch
            android:id="@+id/switch_push"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="25dp"
            android:layout_marginRight="25dp"
            android:elevation="10dp"
            android:thumb="@drawable/push_button"
            tools:ignore="UnusedAttribute" />

    </RelativeLayout>

    <include layout="@layout/view_divider_grey" />

    <RelativeLayout
        android:id="@+id/btn_clear_cache"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginLeft="25dp"
            android:layout_marginStart="25dp"
            android:text="@string/clear_cache"
            android:textColor="@android:color/black"
            android:textSize="15sp" />


        <include
            android:id="@+id/view"
            layout="@layout/view_right_arrow" />

        <TextView
            android:id="@+id/text_cache"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView"
            android:layout_alignBottom="@+id/textView"
            android:layout_gravity="center"
            android:layout_marginEnd="13dp"
            android:layout_marginRight="13dp"
            android:layout_toLeftOf="@+id/view"
            android:layout_toStartOf="@+id/view"
            android:text=""
            android:textSize="14sp"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>

    <include layout="@layout/view_line_grey" />

    <RelativeLayout
        android:id="@+id/btn_rate"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginLeft="25dp"
            android:layout_marginStart="25dp"
            android:text="@string/five_stars_support"
            android:textColor="@android:color/black"
            android:textSize="15sp" />


        <include layout="@layout/view_right_arrow" />

    </RelativeLayout>

    <include layout="@layout/view_line_grey" />

    <RelativeLayout
        android:id="@+id/btn_privacy"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginLeft="25dp"
            android:layout_marginStart="25dp"
            android:text="@string/user_protocol"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <include layout="@layout/view_right_arrow" />

    </RelativeLayout>

    <include layout="@layout/view_divider_grey" />

    <RelativeLayout
        android:id="@+id/btn_about"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginLeft="25dp"
            android:layout_marginStart="25dp"
            android:text="@string/about_us"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <include layout="@layout/view_right_arrow" />

    </RelativeLayout>

    <include layout="@layout/view_divider_grey" />

    <TextView
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:text="@string/logout"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

</LinearLayout>
