<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="98dp">

        <com.example.tvsample.widget.CircleImageView
            android:id="@+id/avatar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:scaleType="centerCrop"
            android:src="@drawable/personal_default" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/avatar"
            android:layout_toRightOf="@id/avatar"
            android:text="@string/click_to_login"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            tools:ignore="RelativeOverlap"
            android:id="@+id/nickname"/>

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:src="@drawable/personal_search"
            tools:ignore="ContentDescription" />

    </RelativeLayout>

    <include layout="@layout/view_divider_grey" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="78dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="3">

        <LinearLayout
            android:id="@+id/btn_recent_play"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/history"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/recent_play"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_my_favorite"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/favorite"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/my_favorite"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_my_comment"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/comment"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/my_comment"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

    <include layout="@layout/view_divider_grey" />

    <RelativeLayout
        android:id="@+id/btn_my_message"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:paddingLeft="10dp"
        android:paddingStart="10dp"
        tools:ignore="RtlSymmetry">

        <TextView
            android:id="@+id/text_my_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/my_message"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <TextView
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@id/text_my_message"
            android:layout_toRightOf="@id/text_my_message"
            android:background="@drawable/round_point_red"
            android:gravity="center"
            android:text="1"
            android:textColor="@android:color/white"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

        <include layout="@layout/view_right_arrow"/>

    </RelativeLayout>

    <include layout="@layout/view_divider_grey" />

    <RelativeLayout
        android:id="@+id/btn_feedback"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:paddingLeft="10dp"
        android:paddingStart="10dp"
        tools:ignore="RtlSymmetry">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/feedback"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <include layout="@layout/view_right_arrow"/>

    </RelativeLayout>

    <include layout="@layout/view_line_grey" />

    <RelativeLayout
        android:id="@+id/btn_copyright"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:paddingLeft="10dp"
        android:paddingStart="10dp"
        tools:ignore="RtlSymmetry">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/copyright"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <include layout="@layout/view_right_arrow"/>

    </RelativeLayout>

    <include layout="@layout/view_line_grey" />

    <RelativeLayout
        android:id="@+id/btn_setting"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:paddingLeft="10dp"
        android:paddingStart="10dp"
        tools:ignore="RtlSymmetry">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/setting"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <include layout="@layout/view_right_arrow"/>

    </RelativeLayout>

    <include layout="@layout/view_line_grey" />

</LinearLayout>